gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

7/31/99 Cleaned up *.c. (by Kazu Hirata)

7/25/99 Cleaned up r_gc.c and i_callbacks.c. (by Kazu Hirata)

7/21/99 Found an attribute in test_verilog.sch to be attached to two
	objects, fixed.

	Removed all traces of s_passing.h

7/16/99 Cleaned up i_sbox.c and i_vars.c o_ales.c (by Kazu Hirata)

	Increased world coord space to 120x90, don't know if there are any
	side effects of this.

	Increased the max zoom factor to 256

	Changed x_grid to be draw grid the grid at a larger zoom factor

	Reverted back to previous world coord space, adjusting above to
	match.  Not ready for a change yet.

7/15/99 Added support for libgdgeda 1.6 (mainly means searching for libpng)

	Removed all traces of old libgdgeda 1.5 gif support replaced it with
	png support

	Changed menu name from Write Image... to Write PNG...

	Minor bug fix in the x_image dialog box code (o_redraw_all in the
	wrong place)

7/14/99 Wrote functions to handle file name extention in i_callback.c.

	Fixed a memory leak in g_funcs_print(). (by Kazu Hirata)

7/13/99 Cleaned up i_callbacks.c (by Kazu Hirata)

7/12/99 Moved the core of a_pan into a_pan_calc

	Implemented the zoom and pan to where the mouse is (center at the
	current mouse location).  Only works with the hotkeys.

	Added i_callback_*_zoom_in_hotkey and *_zoom_out_hotkey

7/11/99 Chnaged the return values of the Scheme functions in g_*.c from
	0 and -1 to #t and #f.

	Cleaned up gschem.c and i_basic.c. (by Kazu Hirata)

7/11/99 Cleaned up a_pan.c, a_zoom.c, g_key.c, g_funcs.c. (by Kazu Hirata)

7/10/99	Updated a few places where it's important to call set_window
	(part of the math speed improvements)
