@@ -9,6 +9,8 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+8/1/99  Removed my_strdup() from i_vars.c and o_comples.c. (by Kazu Hirata)
+
 7/31/99 Cleaned up *.c. (by Kazu Hirata)
 
 7/25/99 Cleaned up r_gc.c and i_callbacks.c. (by Kazu Hirata)
